@@ -1,0 +1,12 @@
+#!/bin/bash
+
+build_dir=`cd $(dirname $0) && pwd`
+src_dir=`cd $build_dir && cd @top_srcdir@ && pwd`
+
+export PYTHONPATH=$src_dir${PYTHONPATH:+:$PYTHONPATH}
+export PKG_CONFIG_PATH=$src_dir/pkgconfig${PKG_CONFIG_PATH:+:$PKG_CONFIG_PATH}
+
+export PATH=$build_dir/bin:$PATH
+export PACKAGES="@PACKAGE@-@VERSION@ $PACKAGES"
+
+exec "$@"
