@@ -1,6 +1,6 @@
 include $(top_srcdir)/common/python.mk
 include $(top_srcdir)/common/trial.mk
-TRIAL_ENV = $(top_srcdir)/env
+TRIAL_ENV = $(top_builddir)/env
 
 setup.py: $(top_builddir)/config.status
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
